[DESIGN FIX] [TEXT ALIGNMENT] [BUTTON DESIGN]

--- a/typescript-with-redux/src/assets/styles/sass/global/default.scss
+++ b/typescript-with-redux/src/assets/styles/sass/global/default.scss
@@ -10,14 +10,33 @@
   align-items: center;
   .default-paragraph {
     max-width: 50%;
+    text-align: center;
+    .default-intro {
+      line-height: 2;
+      padding-bottom: 15px;
+    }
+    .default-btn {
+      height: 40px;
+      padding: 10px;
+      background-color: #2073b9;
+      color: white;
+      border-radius: 5px;
+      border: none;
+      &:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
+      &:active {
+        box-shadow: none;
+      }
+    }
   }
 }
-.logo{
+.logo {
   // background: url(../../../images/fm-logo.svg) no-repeat;
   width: 100%;
-  height: 84px;
+  // height: 84px;
 }
 
-.dog-list{
+.dog-list {
   margin-top: 20px;
 }
